[gd_scene load_steps=29 format=3 uid="uid://ck20r21lsokw1"]

[ext_resource type="Texture2D" uid="uid://0uiw6fd5nr31" path="res://ShmupSandbox/Assets/Player/spaceship-001-spritesheet-001.png" id="1_45j1j"]
[ext_resource type="Script" uid="uid://bu2g5a2g3y0qx" path="res://ShmupSandbox/Player/Scripts/player_ship.gd" id="1_qbyav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qbyav"]
atlas = ExtResource("1_45j1j")
region = Rect2(0, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gcfy"]
atlas = ExtResource("1_45j1j")
region = Rect2(32, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdwny"]
atlas = ExtResource("1_45j1j")
region = Rect2(64, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_idj07"]
atlas = ExtResource("1_45j1j")
region = Rect2(96, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1u2o"]
atlas = ExtResource("1_45j1j")
region = Rect2(128, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7n5u"]
atlas = ExtResource("1_45j1j")
region = Rect2(160, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_60sb6"]
atlas = ExtResource("1_45j1j")
region = Rect2(0, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_20w05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbyav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gcfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdwny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idj07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1u2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idj07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7n5u")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60sb6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bq4us"]
atlas = ExtResource("1_45j1j")
region = Rect2(0, 98, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypq36"]
atlas = ExtResource("1_45j1j")
region = Rect2(16, 98, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmsrr"]
atlas = ExtResource("1_45j1j")
region = Rect2(32, 98, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2weq"]
atlas = ExtResource("1_45j1j")
region = Rect2(48, 98, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_petgg"]
atlas = ExtResource("1_45j1j")
region = Rect2(64, 98, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kvx3"]
atlas = ExtResource("1_45j1j")
region = Rect2(80, 98, 16, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_ekk4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq4us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypq36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmsrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2weq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_petgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kvx3")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_45j1j"]
radius = 11.0
height = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_45j1j"]
atlas = ExtResource("1_45j1j")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_20w05"]
atlas = ExtResource("1_45j1j")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekk4r"]
atlas = ExtResource("1_45j1j")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_anqyg"]
atlas = ExtResource("1_45j1j")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_45j1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45j1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20w05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekk4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anqyg")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t7fqg"]
atlas = ExtResource("1_45j1j")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmp7q"]
atlas = ExtResource("1_45j1j")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2ats"]
atlas = ExtResource("1_45j1j")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_af8hp"]
atlas = ExtResource("1_45j1j")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ia6lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7fqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2ats")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af8hp")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[node name="PlayerShip" type="CharacterBody2D"]
collision_mask = 28
motion_mode = 1
script = ExtResource("1_qbyav")
_max_speed = 300.0
_acceleration = 700.0
_damping = 600.0

[node name="Body" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_20w05")
animation = &"idle"

[node name="ThrusterL" type="AnimatedSprite2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(-4, 18)
sprite_frames = SubResource("SpriteFrames_ekk4r")
animation = &"idle"
frame = 5
frame_progress = 0.098968

[node name="ThrusterR" type="AnimatedSprite2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(3, 18)
sprite_frames = SubResource("SpriteFrames_ekk4r")
animation = &"idle"
frame = 5
frame_progress = 0.0914575

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_45j1j")

[node name="MuzzleL" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9, -22)

[node name="MuzzleFlashL" type="AnimatedSprite2D" parent="MuzzleL"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_45j1j")
animation = &"idle"
autoplay = "idle"

[node name="MuzzleR" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, -22)

[node name="MuzzleFlashR" type="AnimatedSprite2D" parent="MuzzleR"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ia6lr")
animation = &"idle"
autoplay = "idle"

[node name="shot_cooldown_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="shot_cooldown_timer" to="." method="_on_shot_cooldown_timer_timeout"]
